Added different block renderers for different block types.
Changed the coordinate system for blocks.

--- a/Pascal/F.3/IndividualProgrammingProject/units/unitformmain.lfm
+++ b/Pascal/F.3/IndividualProgrammingProject/units/unitformmain.lfm
@@ -19,7 +19,7 @@ object FormMain: TFormMain
     OnClick = OpenGLControlRenderClick
     OnKeyDown = OpenGLControlRenderKeyDown
     OnKeyUp = OpenGLControlRenderKeyUp
-    OnMouseEnter = OpenGLControlRenderMouseEnter
+    OnMouseLeave = OpenGLControlRenderMouseLeave
     OnMouseMove = OpenGLControlRenderMouseMove
     OnPaint = OpenGLControlRenderDraw
     OnResize = OpenGLControlRenderResize
