--- a/Pascal/F.3/IndividualProgrammingProject/forms/unitformmain.lfm
+++ b/Pascal/F.3/IndividualProgrammingProject/forms/unitformmain.lfm
@@ -1,22 +1,25 @@
 object FormMain: TFormMain
   Left = 480
-  Height = 720
-  Top = 180
+  Height = 540
+  Top = 270
   Width = 960
   Caption = 'FormMain'
   ClientHeight = 0
   ClientWidth = 0
   Font.Height = -16
   OnCreate = FormCreate
-  LCLVersion = '2.0.6.0'
+  LCLVersion = '2.0.8.0'
   object OpenGLControlRender: TOpenGLControl
     Left = 105
-    Height = 675
+    Height = 495
     Top = 45
     Width = 750
     Align = alClient
     AutoResizeViewport = True
+    OpenGLMajorVersion = 3
+    OpenGLMinorVersion = 3
     MultiSampling = 4
+    AlphaBits = 8
     OnClick = OpenGLControlRenderClick
     OnExit = OpenGLControlRenderExit
     OnKeyDown = OpenGLControlRenderKeyDown
@@ -27,13 +30,13 @@ object FormMain: TFormMain
   end
   object GroupBoxSettings: TGroupBox
     Left = 0
-    Height = 675
+    Height = 495
     Top = 45
     Width = 105
     Align = alLeft
     AutoSize = True
     Caption = 'Settings'
-    ClientHeight = 650
+    ClientHeight = 470
     ClientWidth = 101
     TabOrder = 1
     object GroupBoxWorldSize: TGroupBox
@@ -77,7 +80,7 @@ object FormMain: TFormMain
     object ButtonSettingsApply: TButton
       Left = 0
       Height = 30
-      Top = 620
+      Top = 440
       Width = 101
       Align = alBottom
       AutoSize = True
@@ -124,7 +127,7 @@ object FormMain: TFormMain
   end
   object GroupBoxBenchmark: TGroupBox
     Left = 855
-    Height = 675
+    Height = 495
     Top = 45
     Width = 105
     Align = alRight
@@ -140,7 +143,7 @@ object FormMain: TFormMain
     AnchorSideBottom.Control = OpenGLControlRender
     AnchorSideBottom.Side = asrBottom
     Left = 105
-    Height = 675
+    Height = 495
     Top = 45
     Width = 750
     Anchors = [akTop, akLeft, akRight, akBottom]
